--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -46,23 +46,33 @@ To Date :
 
   <table class="table table-striped">
 <tr>
+<th>User ID</th>
 <th>First Name </th>
-<th>Last Name </th>
-<th>Email ID </th>
-<th>A/C Creation Date</th>
-<th>Last Login Date</th>
-<th>Last Login IP</th>
+<th>College email ID</th>
+<th>Number of posts created</th>
+<th>Number of bookings made (by this user)</th>
+<th>Charging card</th>
+<th>Receiving card</th>
 <th>User Status</th>
 </tr>
 <% @adminusers.each do |adminuser|%>
 <tr>
+<td><%= adminuser.id %></td>
 <td><%= adminuser.name %></td>
-<td><%= adminuser.last_name %></td>
 <td><%= adminuser.email %></td>
-<td><%= adminuser.created_at.to_date rescue nil%></td>
-<td><%= adminuser.last_sign_in_at.to_date rescue nil%></td>
-<td><%= adminuser.last_sign_in_ip%></td>
-<td><%= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %> |
+<td><%= adminuser.posts.count %></td>
+<td><%= adminuser.bookings.count%></td>
+<%if adminuser.bookings.present? %>
+  <td>YES</td>
+<%else%>
+  <td>NO</td>
+<%end%>
+<%if adminuser.bank_details.present? %>
+  <td>YES</td>
+<%else%>
+  <td>NO</td>
+<%end%>
+<td><%= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %> | 
   <%= link_to "Show", admin_path(adminuser.id) %> | <%= link_to "Delete", admin_path(adminuser.id), :method=> :delete, data: { confirm: 'Are you sure?' } %>
 </td>
 </tr>
