--- a/app/views/home/all_postings.html.erb
+++ b/app/views/home/all_postings.html.erb
@@ -25,7 +25,10 @@ To Date :
 
   <%= submit_tag "Search", :class => "btn btn-primary contact-form"  %> 
   <%end%>
-
+  <div  style="text-align:right;margin-left:10px;margin-bottom: -42px;">
+            <a href="<%= home_all_postings_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a> 
+            <a href="<%= home_all_postings_path(params.merge(format: "pdf"))  %>" class="btn btn-secondary" target="_blank"><i class="icon"><img src="/assets/pdf.png" alt=""></i> PDF</a><br><br>
+     </div>
 <h4>Listing All Post</h4>
 <table cellpadding="1"  class="table table-striped ">
     <tr>
@@ -34,18 +37,15 @@ To Date :
       <th>Poster Name</th>
       <th>Date</th>
       <th>Status</th>
-      <th></th>
-      <th>Drop Off Date</th>
-      <th>Pick up Date</th>
-      <th>Drop off Price</th>
-      <th>Pick up price</th>
-      <!-- <th>Booking Status</th> -->
-      <th>Archived</th>
-      <th>Ratings</th>
+      <th>Price per sq. ft.</th>
+      <th>Total area</th>
+      <th>Area booked</th>
+      <th>Address</th>
+      <th>Deactivate</th>
     </tr>
-
+   
     <% @posts.each_with_index do |post, index| %>
-    
+ 
         <tr>
         <% if params[:page].nil? || params[:page] == "0" || params[:page] == "1" %>
           <% x = 0 %>
@@ -56,33 +56,18 @@ To Date :
         <td><%= index + x+1 %></td>
         <td><%= post.id %></td>
         <td><%= post.user_name rescue nil%>&nbsp;<%= post.user_last_name rescue nil%></td>
-        <td><%= post.created_at.strftime("%d-%m-%Y") %></td> 
+        <td><%= post.created_at.strftime("%d-%m-%Y") rescue nil%></td> 
         <td><% if post.status == true %> Active <% else %> Deactive <% end %></td>
-         <% if post.status == true %>
-        <td> <%= link_to 'Deactive', toggled_feature_post_path(post.id)%></td>
+        <td><%= post.price_sq_ft rescue nil%></td>
+        <td><%= post.area rescue nil%></td>
+        <td><%= post.bookings.pluck(:area).map(&:to_i).inject{|sum,i| sum + i} rescue nil%></td>
+        <td><%= post.street_add rescue nil%> <%= post.apt rescue nil%> <%= post.city rescue nil%> <%= post.state rescue nil%> <%= post.zip_code rescue nil%></td>
+        <td><% if post.status == true %>
+          <%= link_to 'Deactive', toggled_feature_post_path(post.id)%>
          <% else %>
-         <td><%= link_to 'Activate', toggled_feature_post_path(post.id)%></td>
+          <%= link_to 'Activate', toggled_feature_post_path(post.id)%>
          <% end %>
-        
-        <td><%= post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %> -  <%= post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %></td>
-        <td><%= post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= post.pick_up_avaibility_end_date.strftime("%d-%m-%Y") %></td>
-        <%if post.price_include_drop_off.blank?%>
-        <td>-</td>
-         <%else%>
-        <td> <%= post.price_include_drop_off %></td>
-         <%end%>
-          <%if post.price_include_pick_up.blank?%>
-        <td>-</td>
-         <%else%>
-        <td><%= post.price_include_pick_up %></td>
-          <%end%>
-        <!-- <td></td> -->
-        <td><% if post.archive == true %> Yes <% else %> No <% end %></td>
-        <%if post.overall_rating.to_s ==  "NaN"%>
-        <td>No Ratings</td>
-        <%else%>
-      <td><%= post.overall_rating.round(1)%></td>
-        <%end%>
+        </td>
 
       </tr>
     <% end %>
