--- a/app/views/posts/overview.js.erb
+++ b/app/views/posts/overview.js.erb
@@ -1,4 +1,4 @@
-$('#all_posts').append('<%= j render(:partial => 'posts/overviews') %>');
+$('#all_posts').append('<%= j render 'posts/overviews', :posts => @posts %>');
 
 <% if @posts.next_page %>
   $('.pagination').replaceWith('<%= j will_paginate(@posts) %>');
