--- a/app/views/order_receives/payments.html.erb
+++ b/app/views/order_receives/payments.html.erb
@@ -15,17 +15,13 @@
         
         <div class="payment-wrap">
             <% @bookings.each do |booking|%>
+            <% if booking.refund_finder.nil? && booking.name == "transfered" && current_user == booking.user %>
+            <% else %>
             <div class="order-box">
                 <div class="pay-col pay-col1">
                 	<%if booking.stripe_charge_id? %>
                     <span>Payment type</span> :
-
-                        <% if booking.is_cancel == true %>
-                            Cancelled
-                        <% else %>
-                            <%= payment_status(booking) %>
-                        <% end %>
-                        
+                        <%= payment_status(booking) %>
                     <%end%>
                    
                     <p>
@@ -43,17 +39,18 @@
                 </div>
                 
                 <div class="pay-col pay-col1">
-                	<span>Date of transaction</span>: <%= booking.updated_at.strftime("%m/%d/%Y")%>
+                	<span>Date of transaction</span>: <%= booking.transaction_date.strftime("%m/%d/%Y")%>
                 </div>
                 
                 <div class="pay-col pay-col1">
                     <% if booking.user_id == current_user.id %>
-                      <span>Amount</span>: $ <%= booking.price %>
+                      <span>Amount</span>: $ <%= send_by_user(booking) %>
                     <% else %>
                 	<span>Amount</span>: $ <%= received_by_poster(booking) %>
                     <% end %>
                 </div>
             </div>
+            <% end %>
             <%end%>
           <span class="center_align">  <%= will_paginate @bookings %></span>
         </div>
