--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -153,7 +153,7 @@ footer {
   <body>
     <header class="clearfix">
       <div id="logo">
-        <img src="http://store-finding-system.herokuapp.com/assets/logo.png" alt="logo">
+        <img src="http://store-finding-system.herokuapp.com/assets/logo-1cdfedf4f4bcc76ab89b9a1a4099c95a.png" alt="logo">
       </div>
       <h1>Invoice</h1>
       <div id="company" class="clearfix">
@@ -163,10 +163,10 @@ footer {
       </div>
       <div id="project">
         
-        <div><span>CLIENT</span> <%#= @booking.user_name %> <%#= @booking.user_last_name %></div>
+        <div><span>CLIENT</span> <%= @booking.user_name %> <%= @booking.user_last_name %></div>
        
-        <div><span>EMAIL</span> <a href="mailto:<%#= @booking.user_email %>"><%#= @booking.user_email %></a></div>
-        <div><span>DATE</span> <%#= Date.today %></div>
+        <div><span>EMAIL</span> <a href="mailto:<%= @booking.user_email %>"><%= @booking.user_email %></a></div>
+        <div><span>DATE</span> <%= Date.today %></div>
         <div><span>PAYMENT</span> Paid</div>
       </div>
     </header>
