--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -153,7 +153,7 @@ footer {
   <body>
     <header class="clearfix">
       <div id="logo">
-        <img src="http://store-finding-system.herokuapp.com/assets/logo-1cdfedf4f4bcc76ab89b9a1a4099c95a.png" alt="logo">
+        <img src="http://store-finding-system.herokuapp.com/assets/logo.png" alt="logo">
       </div>
       <h1>Invoice</h1>
       <div id="company" class="clearfix">
