--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,4 +1,4 @@
-  <title>ESpaceApp</title>
+  <title>Dinobo</title>
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <link href="/assets/jquery.ui.core.css?body=1" media="all" rel="stylesheet" />
   <link href="/assets/jquery.ui.theme.css?body=1" media="all" rel="stylesheet" />
