--- a/app/views/payement_transfers/_result_payment.html.erb
+++ b/app/views/payement_transfers/_result_payment.html.erb
@@ -29,5 +29,5 @@
      -----  
   <% end %>
 </td>
-<td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
+<td><%= link_to "View Details", booking, :target=>"_blank" %></td>
 </tr>
