debug on pdf invoice functionality

--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>Dinobo Invoice</title>
+    <%= stylesheet_link_tag 'pdf_invoice' %>
     
   </head>
   <body>
     <header class="clearfix">
       <div id="logo">
         
-        
+       
       </div>
       <h1>Invoice</h1>
       <div id="company" class="clearfix">
