--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>Dinobo Invoice</title>
-    <%= stylesheet_link_tag "#{Rails.application.routes.url_helpers}/assets/pdf_invoice.css" %>
+   
+    <%= wicked_pdf_stylesheet_link_tag "pdf_invoice.css" %>
     
   </head>
   <body>
     <header class="clearfix">
       <div id="logo">
-         <%= link_to image_tag("#{Rails.application.routes.url_helpers}/assets/logo.png"),root_path %>
+         <%= image_tag("http://store-finding-system.herokuapp.com/assets/logo.png") %>
         
       </div>
       <h1>Invoice</h1>
