debug on pdf invoice functionality

--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -11,7 +11,7 @@
   <body>
     <header class="clearfix">
       <div id="logo">
-         <%= image_tag("http://store-finding-system.herokuapp.com/assets/logo.png") %>
+         <%= wicked_pdf_image_tag "logo.png" %>
         
       </div>
       <h1>Invoice</h1>
