--- a/app/views/disputes/search.html.erb
+++ b/app/views/disputes/search.html.erb
@@ -16,6 +16,7 @@
 <th>Booked Area/Sq.Ft</th>
 <th>Poster Name</th>
 <th>Finder Name</th>
+<th>Dispute status</th>
 <th>Address</th>
 <th>Action</th>
 </tr>
