--- a/app/views/disputes/hold.html.erb
+++ b/app/views/disputes/hold.html.erb
@@ -1,12 +1,5 @@
 <%= link_to "Disputes result", disputes_path %> | <%= link_to "Search disputes", search_disputes_path %> | <%= link_to "Payment hold", hold_disputes_path %> <br/><br/>
 
-<%= form_tag search_disputes_path, :method => 'get' do %>
-  <p>
-    <%= text_field_tag :search, params[:search], :placeholder=>"Enter booking ID" %>
-    <%= submit_tag "Search", :name => nil, :class=>"btn btn-primary contact-form" %>
-  </p>
-<% end %>
-
 
 <table class="table table-striped">
 <tr>
@@ -21,6 +14,6 @@
 <th>Action</th>
 </tr>
 <% @bookings.each_with_index do |booking, index|%>
-  <%= render 'search_result', :index => index, :booking => booking %>
+  <%= render 'hold_result', :index => index, :booking => booking %>
 <%end%> 
 </table>
