--- a/app/views/disputes/show.html.erb
+++ b/app/views/disputes/show.html.erb
@@ -1,6 +1,4 @@
-
-
-<%= link_to "Disputes", disputes_path %> | <%= link_to "Search disputes", search_disputes_path %> <br/>
+<%= link_to "Disputes result", disputes_path %> | <%= link_to "Search disputes", search_disputes_path %> | <%= link_to "Payment hold", hold_disputes_path %> <br/><br/>
 
 <p>
 	<strong><div>Booking ID : </div> </strong>  
