--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -42,84 +42,9 @@
 
         <!-- custom scrollbar plugin -->
     <%= stylesheet_link_tag  'scroll', "jquery.mCustomScrollbar" %>
-    <%= javascript_include_tag "bootstrap.min", "jquery.mCustomScrollbar.concat.min" %>
+    <%= javascript_include_tag "bootstrap.min", "jquery.mCustomScrollbar.concat.min", "scrollbar.js" %>
 	
-	<script>
-		(function($){
-			$(window).load(function(){
-
-
-				
-				/* all available option parameters with their default values */
-				$(".content").mCustomScrollbar({
-					setWidth:false,
-					setHeight:false,
-					setTop:0,
-					setLeft:0,
-					axis:"y",
-					scrollbarPosition:"inside",
-					scrollInertia:950,
-					autoDraggerLength:true,
-					autoHideScrollbar:false,
-					autoExpandScrollbar:false,
-					alwaysShowScrollbar:0,
-					snapAmount:null,
-					snapOffset:0,
-					mouseWheel:{
-						enable:true,
-						scrollAmount:"auto",
-						axis:"y",
-						preventDefault:false,
-						deltaFactor:"auto",
-						normalizeDelta:false,
-						invert:false,
-						disableOver:["select","option","keygen","datalist","textarea"]
-					},
-					scrollButtons:{
-						enable:false,
-						scrollType:"stepless",
-						scrollAmount:"auto"
-					},
-					keyboard:{
-						enable:true,
-						scrollType:"stepless",
-						scrollAmount:"auto"
-					},
-					contentTouchScroll:25,
-					advanced:{
-						autoExpandHorizontalScroll:false,
-						autoScrollOnFocus:"input,textarea,select,button,datalist,keygen,a[tabindex],area,object,[contenteditable='true']",
-						updateOnContentResize:true,
-						updateOnImageLoad:true,
-						updateOnSelectorChange:false,
-						releaseDraggableSelectors:false
-					},
-					theme:"light",
-					callbacks:{
-						onInit:false,
-						onScrollStart:false,
-						onScroll:false,
-						onTotalScroll:false,
-						onTotalScrollBack:false,
-						whileScrolling:false,
-						onTotalScrollOffset:0,
-						onTotalScrollBackOffset:0,
-						alwaysTriggerOffsets:true,
-						onOverflowY:false,
-						onOverflowX:false,
-						onOverflowYNone:false,
-						onOverflowXNone:false
-					},
-					live:false,
-					liveSelector:null
-				});
-				
-			});
-		})(jQuery);
-
-
-
-	</script>
+	
 
 	<script>
 
@@ -162,19 +87,20 @@
 	var refreshId = setInterval(function()
 	{
 	     $('#responsecontainer').fadeOut("slow").load('<%= refresh_part_messages_path%>').fadeIn("slow");
+	     
 	}, 1000);
 
 	var refresmsg_hId = setInterval(function()
 	{
 	     $('#refresh_msg').load('<%= refresh_message_messages_path(:recv_id=>"#{params[:recv_id]}")%>');
+	     $(".content").mCustomScrollbar("scrollTo", "bottom");
 	}, 1000);
-	</script>
-
-
-	<script>
+	
+	
 
 	jQuery(document).ready(function() {
 		jQuery("#user_msg").load('<%= user_message_messages_path(:recv_id=>"#{params[:recv_id]}") %>');
+		$(".content").mCustomScrollbar("scrollTo", "bottom");
 
 	});
 
@@ -183,4 +109,6 @@
 	{
 	     $('#user_msg').load('<%= user_message_messages_path(:recv_id=>"#{params[:recv_id]}")%>');
 	}, 1000);
+
+
 </script>
