--- a/app/views/disputes/_search_result.html.erb
+++ b/app/views/disputes/_search_result.html.erb
@@ -5,15 +5,15 @@
 <td><%= booking.post_id %></td>
 <td><%= booking.area %></td>
 <td> 
-	<%= link_to "#{booking.poster_name} #{booking.poster_last_name}", dispute_path(booking) %>
+	<%= booking.poster_name %> <%= booking.poster_last_name %>
 </td>
 <td>
-	<%= link_to "#{booking.user_name} #{booking.user_last_name}", dispute_path(booking) %>
+	<%= booking.user_name %> <%= booking.user_last_name %>
 </td>
 <td><%= booking.on_hold? ? 'Hold' : 'Normal' %></td>
 <td><%= booking.post_address %> </td>
 <td>
-	<%= link_to "Toggle dispute status", hold_money_dispute_path(booking, :search=> params[:search]) %> | <%= link_to "View Booking", booking_path(booking), :target=>"_blank"  %>
+	<%= link_to "Toggle dispute status", hold_money_dispute_path(booking, :search=> params[:search]) %> | <%= link_to "Transfer/Charge Payment", dispute_path(booking)  %>  | <%= link_to "View Booking", booking_path(booking), :target=>"_blank"  %>
 
 </td>
 </tr>
