--- a/app/views/disputes/search.html.erb
+++ b/app/views/disputes/search.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Disputes result", disputes_path %> | <%= link_to "Search disputes", search_disputes_path %> | <%= link_to "Payment hold", hold_disputes_path %> <br/><br/>
+<%= link_to "Disputes result", disputes_path %> | <%= link_to "Search Booking ID", search_disputes_path %> | <%= link_to "Payment hold", hold_disputes_path %> <br/><br/>
 
 <%= form_tag search_disputes_path, :method => 'get' do %>
   <p>
