Design Changes - Message

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -25,7 +25,7 @@
 		            <div class="content">
 			            <div id="refresh_msg"></div>
 		            </div>
-		            <div class="enter"><a href="#">Press ENTER to send</a></div>
+		            <div class="enter">Press ENTER to send</div>
 	              </div>
                 <%end%>
                 <%if params[:recv_id].present?%>
