--- a/app/views/messages/refresh_message.html.erb
+++ b/app/views/messages/refresh_message.html.erb
@@ -1,14 +1,9 @@
 
 
-		<div id="refresh_msg">
-			<% @total_messages.each do |messages|%>
-				<div class="chat">
-	            	<div <% if messages.sender_id == current_user.id %> class="right" <% else %> class="left" <% end %>>
+<%= render 'refresh_message', :total_messages => @total_messages %>
 
-	            		
-	            		<p><%= messages.body.html_safe %>  <%= link_to "Click to view Post" ,post_path(messages.post.id) rescue nil%></p>
-	            		<span><%= messages.created_at.strftime("%e %b %Y %H:%M:%S%p") %></span>
-	            	</div>
-	            </div>
-	        <% end %>
-	    </div>
+<script>
+jQuery(document).ready(function() {
+	jQuery(".content").mCustomScrollbar("scrollTo", "bottom");
+});
+</script>
