--- a/app/views/disputes/hold.html.erb
+++ b/app/views/disputes/hold.html.erb
@@ -1,5 +1,4 @@
-<%= link_to "Disputes result", disputes_path %> | <%= link_to "Search Booking ID", search_disputes_path %> | <%= link_to "Payment hold", hold_disputes_path %> <br/><br/>
-
+<%= render 'common_links' %>
 
 <table class="table table-striped">
 <tr>
