--- a/app/views/disputes/charge_to_finder.html.erb
+++ b/app/views/disputes/charge_to_finder.html.erb
@@ -1,10 +1,9 @@
 <%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","admin_validation" %>
 
-<p><%= @booking.user_name %> <%= @booking.user_last_name %> </p>
-<p> Booking Price:  $<%= @booking.price %>  </p>
-<%= form_tag charged_to_finder_dispute_path(@booking.id), :method => 'put', :id=>"dispute" do %>
+
+<%= form_tag charged_to_finder_dispute_path(params[:id]), :method => 'put', :id=>"dispute" do %>
   <p>
-  	<%= hidden_field_tag :user_id, @booking.user_id %>
+  	<%= hidden_field_tag :user_id, params[:id] %>
     <%= text_field_tag :amount %>
   </p>
   <p>
