--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -65,7 +65,7 @@ To Date :
 <%else%>
   <td>NO</td>
 <%end%>
-<%if adminuser.bank_details.present? %>
+<%if adminuser.bank_detail.present? %>
   <td>YES</td>
 <%else%>
   <td>NO</td>
