--- a/app/views/disputes/search_user.html.erb
+++ b/app/views/disputes/search_user.html.erb
@@ -5,7 +5,23 @@
     <%= submit_tag "Search", :name => nil, :class=>"btn btn-primary contact-form" %>
   </p>
 <% end %>
-
+<% if @search_user %>
+<table class="table table-striped">
+<tr>
+	<th>User ID</th>
+	<th>College Email ID</th>
+	<th>First Name</th>
+	<th>Last Name</th>
+	<th>Actions</th>
+</tr>
+<tr>
+	<td><%= @search_user.id %></td>
+	<td><%= @search_user.email %></td>
+	<td><%= @search_user.name %></td>
+	<td><%= @search_user.last_name %></td>
+	<td><%= charge_user(@search_user) %> | <%= send_user(@search_user) %></td>
+</tr>
+<% else %>
 <table class="table table-striped">
 <tr>
 <th>Sr No.</th>
@@ -18,7 +34,6 @@
 <th>Stripe Commission</th>
 <th>Net We Send</th>
 <th>Net We Receive</th>
-<th>Actions</th>
 </tr>
 
 
@@ -34,8 +49,8 @@
 	<td><%= user.transaction_status == "charge" ? (user.amt*0.029+0.30).round(4) : 0.25 %></td>
 	<td><%= user.amt + 0.25 if user.transaction_status == "send" %></td>
 	<td><%= user.amt - (user.amt*0.029+0.30).round(4) if user.transaction_status == "charge"  %></td>
-	<td><%= charge_user(user) %> | <%= link_to "Charge" %></td>
 </tr>
 
 <% end %>
 </table>
+<% end %>
