--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -74,6 +74,7 @@
               <%= f.hidden_field :poster_id, :value=> @post.user_id %>
 
               <div class="function">
+                <div class="form-group" id="postdetailsErr"></div>
                 <div class="f1">
                 
                       <div class="f1_tool" style="margin-top:20px;">Area needed <a class="tooltip10" href="#" style="color:#999; text-decoration:none;">
