--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min" %>
 
  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
@@ -107,6 +109,8 @@
 
             <div class="right-side">
               <div class="payment-wrap"> 
+
+         <%= link_to "Bank Details", bank_details_path %> | <%= link_to "Credit Card Details", credit_cards_path %><br/>
 
     <div class="formwrap" style="font-size: 15px;">
 
