--- a/app/views/bank_details/index.html.erb
+++ b/app/views/bank_details/index.html.erb
@@ -11,9 +11,11 @@
     </ul>
     
     <div class="right-side">
-      
-        
+
         <div class="payment-wrap">
+
+        <%= link_to "Bank Details", bank_details_path %> | <%= link_to "Credit Card Details", credit_cards_path %><br/>
+
         <%unless @bank_detail.present?%>
           <div class="new-add-post"><%= link_to '+Add Bank Details', new_bank_detail_path %> </div>
         <%end%>
