--- a/app/views/credit_cards/index.html.erb
+++ b/app/views/credit_cards/index.html.erb
@@ -16,8 +16,10 @@
     
     <div class="right-side">
       
-        
+          
         <div class="payment-wrap">
+            <%= link_to "Bank Details", bank_details_path %> | <%= link_to "Credit Card Details", credit_cards_path %><br/>
+
         <%unless @credit_card.present?%>
           <div class="new-add-post"><%= link_to '+Add Credit card Details', new_credit_card_path %> </div>
         <%end%>
