--- a/app/views/disputes/search_user.html.erb
+++ b/app/views/disputes/search_user.html.erb
@@ -22,35 +22,37 @@
 	<td><%= charge_user(@search_user) %> | <%= send_user(@search_user) %></td>
 </tr>
 <% else %>
-<table class="table table-striped">
-<tr>
-<th>Sr No.</th>
-<th>User ID</th>
-<th>College Email ID</th>
-<th>First Name</th>
-<th>Last Name</th>
-<th>Amount Send</th>
-<th>Amount Charge</th>
-<th>Stripe Commission</th>
-<th>Net We Send</th>
-<th>Net We Receive</th>
-</tr>
+	<table class="table table-striped">
+	<tr>
+	<th>Sr No.</th>
+	<th>User ID</th>
+	<th>College Email ID</th>
+	<th>First Name</th>
+	<th>Last Name</th>
+	<th>Amount Send</th>
+	<th>Amount Charge</th>
+	<th>Stripe Commission</th>
+	<th>Net We Send</th>
+	<th>Net We Receive</th>
+	</tr>
 
 
-<% @users.each_with_index do |user,index|%>
-<tr>
-	<td><%= index + 1 %></td>
-	<td><%= user.id %></td>
-	<td><%= user.email %></td>
-	<td><%= user.name %></td>
-	<td><%= user.last_name %></td>
-	<td><%= user.amt if user.transaction_status == "send" %></td>
-	<td><%= user.amt if user.transaction_status == "charge" %></td>
-	<td><%= user.transaction_status == "charge" ? (user.amt*0.029+0.30).round(4) : 0.25 %></td>
-	<td><%= user.amt + 0.25 if user.transaction_status == "send" %></td>
-	<td><%= user.amt - (user.amt*0.029+0.30).round(4) if user.transaction_status == "charge"  %></td>
-</tr>
+	<% @users.each_with_index do |user,index|%>
+	<tr>
+		<td><%= index + 1 %></td>
+		<td><%= user.id %></td>
+		<td><%= user.email %></td>
+		<td><%= user.name %></td>
+		<td><%= user.last_name %></td>
+		<td><%= user.amt if user.transaction_status == "send" %></td>
+		<td><%= user.amt if user.transaction_status == "charge" %></td>
+		<td><%= user.transaction_status == "charge" ? (user.amt*0.029+0.30).round(4) : 0.25 %></td>
+		<td><%= user.amt + 0.25 if user.transaction_status == "send" %></td>
+		<td><%= user.amt - (user.amt*0.029+0.30).round(4) if user.transaction_status == "charge"  %></td>
+	</tr>
 
-<% end %>
-</table>
+	<% end %>
+	</table>
+	<%= will_paginate @users %>
+
 <% end %>
