--- a/app/views/disputes/search_user.html.erb
+++ b/app/views/disputes/search_user.html.erb
@@ -1,4 +1,7 @@
 <%= render 'common_links' %>
+	<div  style="text-align:right;margin-left:10px;">
+       <a href="<%= search_user_disputes_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a><a href="<%= search_user_disputes_path(params.merge(format: "pdf"))  %>" class="btn btn-secondary" target="_blank"><i class="icon"><img src="/assets/pdf.png" alt=""></i> PDF</a><br><br>
+     </div>
 <%= form_tag search_user_disputes_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :search, params[:search], :placeholder=>"Enter college email ID" %>
@@ -53,6 +56,7 @@
 
 	<% end %>
 	</table>
+
 	<%= will_paginate @users %>
 
 <% end %>
