--- a/app/views/disputes/_search_result.html.erb
+++ b/app/views/disputes/_search_result.html.erb
@@ -13,7 +13,7 @@
 <td><%= booking.on_hold? ? 'Hold' : 'Normal' %></td>
 <td><%= booking.post_address %> </td>
 <td>
-	<%= link_to (booking.on_hold? ? 'UnHold' : 'Hold'), hold_money_dispute_path(booking, :search=> params[:search]) %> | <%= check_disputes(booking.id, booking.user_id, 'finder')  %>  | <%= link_to "View Booking", booking_path(booking), :target=>"_blank"  %>
+	<%= change_status(booking) %> | <%= check_disputes(booking,'finder')  %>  | <%= link_to "View Booking", booking_path(booking), :target=>"_blank"  %>
 
 </td>
 </tr>
