--- a/app/views/admins/index.xls.erb
+++ b/app/views/admins/index.xls.erb
@@ -33,7 +33,7 @@
 <%else%>
   <td>NO</td>
 <%end%>
-<%if adminuser.bank_details.present? %>
+<%if adminuser.bank_detail.present? %>
   <td>YES</td>
 <%else%>
   <td>NO</td>
