--- a/app/views/home/searching.pdf.erb
+++ b/app/views/home/searching.pdf.erb
@@ -33,7 +33,7 @@
 <%else%>
   <td>NO</td>
 <%end%>
-<%if adminuser.bank_details.present? %>
+<%if adminuser.bank_detail.present? %>
   <td>YES</td>
 <%else%>
   <td>NO</td>
