--- a/app/views/disputes/_search_users.html.erb
+++ b/app/views/disputes/_search_users.html.erb
@@ -1,5 +1,5 @@
 
-	<table class="table table-striped" bordered>
+	<table class="table table-striped" border>
 	<tr>
 	<th>Sr No.</th>
 	<th>User ID</th>
